--- a/catalog/PonAbe/TwoSpecies_2L11.yml
+++ b/catalog/PonAbe/TwoSpecies_2L11.yml
@@ -3,8 +3,8 @@ description: The two orang-utan species, Sumatran (Pongo abelii) and Bornean (Po
   each population. This model is an isolation-with- migration model, with exponential
   growth or decay in each population after the split. The Sumatran population grows
   in size, while the Bornean population slightly declines.
-time_units: generations
-generation_time: 1
+time_units: years
+generation_time: 20
 metadata:
   id: TwoSpecies_2L11
   description: Two population orangutan model
@@ -14,16 +14,15 @@ metadata:
     year: 2011
     reasons: [demographic model]
   mutation_rate: 2e-08
-  generation_time: 20
 demes:
 - name: Bornean
   description: Pongo pygmaeus (Bornean) population
   epochs:
-  - {end_time: 20157.45, start_size: 17934}
+  - {end_time: 403149.0, start_size: 17934}
   - {end_time: 0, start_size: 10616.928, end_size: 8805}
 - name: Sumatran
   description: Pongo abelii (Sumatran) population
-  start_time: 20157.45
+  start_time: 403149.0
   ancestors: [Bornean]
   epochs:
   - {end_time: 0, start_size: 7317.072000000001, end_size: 37661}
