--- a/catalog/AnaPla/MallardBlackDuck_2L19.yml
+++ b/catalog/AnaPla/MallardBlackDuck_2L19.yml
@@ -1,8 +1,8 @@
 description: This is a model fit to contemporary samples of wild North American mallard
   and black duck, using the "split-migration" model of dadi. See Figure 6 of Lavretsky
   et al 2019.
-time_units: generations
-generation_time: 1
+time_units: years
+generation_time: 4
 metadata:
   id: MallardBlackDuck_2L19
   description: North American Mallard/Black Duck split
@@ -12,12 +12,11 @@ metadata:
     year: 2019
     reasons: [demographic model]
   mutation_rate: 4.83e-09
-  generation_time: 4
 demes:
 - name: Ancestral
   description: Ancestral population
   epochs:
-  - {end_time: 158076.25, start_size: 819535}
+  - {end_time: 632305.0, start_size: 819535}
 - name: Mallard
   description: Wild North American mallards
   ancestors: [Ancestral]
