--- a/catalog/AraTha/African3Epoch_1H18.yml
+++ b/catalog/AraTha/African3Epoch_1H18.yml
@@ -2,7 +2,7 @@ description: Model estimated from site frequency spectrum of synonymous SNPs fro
   African (South Middle Atlas) samples using Williamson et al. 2005 methodology. Values
   come from supplementary table 1 of Huber et al 2018. Sizes change from N_A -> N_2
   -> N_3 and t_2 is the time of the second epoch and t_3 is the time of the 3rd epoch.
-time_units: generations
+time_units: years
 generation_time: 1
 metadata:
   id: African3Epoch_1H18
@@ -13,7 +13,6 @@ metadata:
     year: 2018
     reasons: [demographic model]
   mutation_rate: 7e-09
-  generation_time: 1
 demes:
 - name: SouthMiddleAtlas
   description: Arabidopsis Thaliana South Middle Atlas population
