--- a/catalog/DroMel/African3Epoch_1S16.yml
+++ b/catalog/DroMel/African3Epoch_1S16.yml
@@ -5,8 +5,8 @@ description: 'The three epoch (modern, bottleneck, ancestral) model estimated fo
   number of generations were doubled from PSMC estimates when simulating data from
   msms in the original publication. We have faithfully represented the published model
   here.'
-time_units: generations
-generation_time: 1
+time_units: years
+generation_time: 0.1
 metadata:
   id: African3Epoch_1S16
   description: Three epoch African population
@@ -16,11 +16,10 @@ metadata:
     year: 2016
     reasons: [demographic model]
   mutation_rate: 8.4e-09
-  generation_time: 0.1
 demes:
 - name: AFR
   description: African D. melanogaster population
   epochs:
-  - {end_time: 2200000.0, start_size: 652700}
-  - {end_time: 200000.0, start_size: 145300.0}
-  - {end_time: 0, start_size: 544200.0}
+  - {end_time: 220000.0, start_size: 652700}
+  - {end_time: 20000.0, start_size: 145300.0}
+  - {end_time: 0.0, start_size: 544200.0}
