--- a/catalog/HomSap/AncientEurope_4A21.yml
+++ b/catalog/HomSap/AncientEurope_4A21.yml
@@ -8,8 +8,8 @@ description: Population structure that has existed over the last 45,000 years in
   Europe to admixture with the Neolithic farmers giving rise to Bronze Age europeans.
   There is only an exponential growth in population size from then to the Present-day.
   Samples are taken at multiple point throughout history from each population.
-time_units: generations
-generation_time: 1
+time_units: years
+generation_time: 29
 metadata:
   id: AncientEurope_4A21
   description: Multi-population model of ancient Europe
@@ -19,22 +19,21 @@ metadata:
     year: '2022'
     reasons: [demographic model]
   mutation_rate: 1.25e-08
-  generation_time: 29
 demes:
 - name: OOA
   description: Basal/OOA
   epochs:
-  - {end_time: 1500, start_size: 5000}
+  - {end_time: 43500, start_size: 5000}
 - name: NE
   description: Northern European
   ancestors: [OOA]
   epochs:
-  - {end_time: 600, start_size: 5000}
+  - {end_time: 17400, start_size: 5000}
 - name: WA
   description: West Asian
   ancestors: [OOA]
   epochs:
-  - {end_time: 800, start_size: 5000}
+  - {end_time: 23200, start_size: 5000}
 - name: CHG
   description: Caucasus Hunter-gathers
   ancestors: [WA]
@@ -57,21 +56,21 @@ demes:
   - {end_time: 0, start_size: 10000}
 - name: NEO
   description: Neolithic
-  start_time: 200
+  start_time: 5800
   ancestors: [WHG, ANA]
   proportions: [0.25, 0.75]
   epochs:
   - {end_time: 0, start_size: 50000}
 - name: YAM
   description: Yamnaya
-  start_time: 180
+  start_time: 5220
   ancestors: [EHG, CHG]
   proportions: [0.5, 0.5]
   epochs:
   - {end_time: 0, start_size: 5000}
 - name: Bronze
   description: Bronze Age
-  start_time: 140
+  start_time: 4060
   ancestors: [YAM, NEO]
   proportions: [0.5, 0.5]
   epochs:
