--- a/catalog/HomSap/OutOfAfricaArchaicAdmixture_5R19.yml
+++ b/catalog/HomSap/OutOfAfricaArchaicAdmixture_5R19.yml
@@ -5,8 +5,8 @@ description: The three population out-of-African model popularized by Gutenkunst
   African branch (a deep diverging branch within Africa). Admixture is modeled as
   symmetric migration between the archaic and modern human branches, with contribution
   ending at a given time in the past.
-time_units: generations
-generation_time: 1
+time_units: years
+generation_time: 29
 metadata:
   id: OutOfAfricaArchaicAdmixture_5R19
   description: Three population out-of-Africa with archaic admixture
@@ -16,55 +16,54 @@ metadata:
     year: 2019
     reasons: [demographic model]
   mutation_rate: null
-  generation_time: 29
 demes:
 - name: YRI
   description: 1000 Genomes YRI (Yoruba)
   epochs:
-  - {end_time: 10344.827586206897, start_size: 3600}
+  - {end_time: 300000.0, start_size: 3600}
   - {end_time: 0, start_size: 13900.0}
 - name: Neanderthal
   description: Putative Neanderthals
-  start_time: 19275.862068965518
+  start_time: 559000.0
   ancestors: [YRI]
   epochs:
   - {end_time: 0, start_size: 3600}
 - name: ArchaicAFR
   description: Putative Archaic Africans
-  start_time: 17206.896551724138
+  start_time: 499000.0
   ancestors: [YRI]
   epochs:
   - {end_time: 0, start_size: 3600}
 - name: CEU
   description: 1000 Genomes CEU (Utah Residents (CEPH) with Northern and Western European
     Ancestry)
-  start_time: 2093.103448275862
+  start_time: 60699.99999999999
   ancestors: [YRI]
   epochs:
-  - {end_time: 1241.3793103448277, start_size: 880}
+  - {end_time: 36000.0, start_size: 880}
   - {end_time: 0, start_size: 2300.0, end_size: 10855.080951853866}
 - name: CHB
   description: 1000 Genomes CHB (Han Chinese in Beijing, China)
-  start_time: 1241.3793103448277
+  start_time: 36000.0
   ancestors: [CEU]
   epochs:
   - {end_time: 0, start_size: 650.0, end_size: 65834.77001122756}
 migrations:
 - demes: [YRI, ArchaicAFR]
   rate: 1.98e-05
-  start_time: 4310.3448275862065
-  end_time: 644.8275862068965
+  start_time: 124999.99999999999
+  end_time: 18700.0
 - demes: [YRI, CEU]
   rate: 0.000522
-  end_time: 1241.3793103448277
+  end_time: 36000.0
 - demes: [CEU, Neanderthal]
   rate: 8.25e-06
-  end_time: 644.8275862068965
+  end_time: 18700.0
 - demes: [Neanderthal, CHB]
   rate: 8.25e-06
-  end_time: 644.8275862068965
+  end_time: 18700.0
 - demes: [YRI, CEU]
   rate: 2.48e-05
-  start_time: 1241.3793103448277
+  start_time: 36000.0
 - demes: [CEU, CHB]
   rate: 0.000113
