--- a/catalog/HomSap/PapuansOutOfAfrica_10J19.yml
+++ b/catalog/HomSap/PapuansOutOfAfrica_10J19.yml
@@ -3,8 +3,8 @@ description: A ten population model of out-of-Africa, including two pulses of De
   Most parameters are from Jacobs et al. (2019), Table S5 and Figure S5. This model
   is an extension of one from Malaspinas et al. (2016), thus some parameters are inherited
   from there.
-time_units: generations
-generation_time: 1
+time_units: years
+generation_time: 29
 metadata:
   id: PapuansOutOfAfrica_10J19
   description: Out-of-Africa with archaic admixture into Papuans
@@ -18,118 +18,117 @@ metadata:
     year: 2016
     reasons: [demographic model]
   mutation_rate: 1.4e-08
-  generation_time: 29
 demes:
 - name: YRI
   description: 1000 Genomes YRI (Yoruba)
   epochs:
-  - {end_time: 20225, start_size: 32671}
-  - {end_time: 2218, start_size: 41563.0}
+  - {end_time: 586525, start_size: 32671}
+  - {end_time: 64322, start_size: 41563.0}
   - {end_time: 0, start_size: 48433.0}
 - name: DenA
   description: Altai Denisovan (sampling) lineage
-  start_time: 20225
+  start_time: 586525
   ancestors: [YRI]
   epochs:
-  - {end_time: 15090, start_size: 13249}
-  - {end_time: 12500, start_size: 100.0}
-  - {end_time: 9750, start_size: 100.0}
+  - {end_time: 437610, start_size: 13249}
+  - {end_time: 362500, start_size: 100.0}
+  - {end_time: 282750, start_size: 100.0}
   - {end_time: 0, start_size: 5083.0}
 - name: NeaA
   description: Altai Neandertal (sampling) lineage
-  start_time: 15090
+  start_time: 437610
   ancestors: [DenA]
   epochs:
-  - {end_time: 3375, start_size: 13249}
+  - {end_time: 97875, start_size: 13249}
   - {end_time: 0, start_size: 826.0}
 - name: Den2
   description: Denisovan D2 (introgressing) lineage
-  start_time: 12500
+  start_time: 362500
   ancestors: [DenA]
   epochs:
   - {end_time: 0, start_size: 13249}
 - name: Den1
   description: Denisovan D1 (introgressing) lineage
-  start_time: 9750
+  start_time: 282750
   ancestors: [DenA]
   epochs:
   - {end_time: 0, start_size: 13249}
 - name: Nea1
   description: Neandertal N1 (introgressing) lineage
-  start_time: 3375
+  start_time: 97875
   ancestors: [NeaA]
   epochs:
   - {end_time: 0, start_size: 13249}
 - name: Ghost
   description: Out-of-Africa lineage
-  start_time: 2218
+  start_time: 64322
   ancestors: [YRI]
   epochs:
-  - {end_time: 2119, start_size: 1394}
+  - {end_time: 61451, start_size: 1394}
   - {end_time: 0, start_size: 8516.0}
 - name: Papuan
   description: Papuans from Indonesia and New Guinea
-  start_time: 1784
+  start_time: 51736
   ancestors: [Ghost]
   epochs:
-  - {end_time: 1685, start_size: 243}
+  - {end_time: 48865, start_size: 243}
   - {end_time: 0, start_size: 8834.0}
 - name: CHB
   description: 1000 Genomes CHB (Han Chinese in Beijing, China)
-  start_time: 1758
+  start_time: 50982
   ancestors: [Ghost]
   epochs:
-  - {end_time: 1659, start_size: 2231}
-  - {end_time: 1293, start_size: 12971.0}
+  - {end_time: 48111, start_size: 2231}
+  - {end_time: 37497, start_size: 12971.0}
   - {end_time: 0, start_size: 9025.0}
 - name: CEU
   description: 1000 Genomes CEU (Utah Residents (CEPH) with Northern and Western European
     Ancestry)
-  start_time: 1293
+  start_time: 37497
   ancestors: [CHB]
   epochs:
   - {end_time: 0, start_size: 6962}
 migrations:
 - demes: [YRI, Ghost]
   rate: 0.000179
-  start_time: 1659.0
+  start_time: 48111.0
 - demes: [CHB, Papuan]
   rate: 0.000572
-  start_time: 1659.0
-  end_time: 1293.0
+  start_time: 48111.0
+  end_time: 37497.0
 - demes: [CHB, Ghost]
   rate: 0.000442
-  start_time: 1659.0
-  end_time: 1293.0
+  start_time: 48111.0
+  end_time: 37497.0
 - demes: [CEU, CHB]
   rate: 3.14e-05
 - demes: [CEU, Ghost]
   rate: 0.000442
 - demes: [CHB, Papuan]
   rate: 5.72e-05
-  start_time: 1293.0
+  start_time: 37497.0
 pulses:
 - sources: [Nea1]
   dest: Ghost
-  time: 1853
+  time: 53737
   proportions: [0.024]
 - sources: [Den2]
   dest: Papuan
-  time: 1575.8620689655172
+  time: 45700.0
   proportions: [0.018]
 - sources: [Nea1]
   dest: CHB
-  time: 1566
+  time: 45414
   proportions: [0.011]
 - sources: [Nea1]
   dest: Papuan
-  time: 1412
+  time: 40948
   proportions: [0.002]
 - sources: [Den1]
   dest: Papuan
-  time: 1027.5862068965516
+  time: 29799.999999999996
   proportions: [0.022000000000000002]
 - sources: [Nea1]
   dest: CHB
-  time: 883
+  time: 25607
   proportions: [0.002]
